--- a/valentine-confession.css
+++ b/valentine-confession.css
@@ -1,3 +1,4 @@
+@ -0,0 +1,287 @@
 * {
     box-sizing: border-box;
 }
@@ -97,9 +98,9 @@ body {
 /* Стили для гифки */
 .message .gif-container {
     position: absolute;
-    bottom: 5px; /* Отступ снизу */
+    bottom: 0px; /* Отступ снизу */
     right: 20px; /* Отступ справа */
-    width: 80px; /* Уменьшенная ширина гифки */
+    width: 40px; /* Уменьшенная ширина гифки */
     height: auto; /* Высота автоматическая */
     z-index: 1; /* Убедитесь, что гифка не перекрывает текст */
     opacity: 1; /* Начальная прозрачность */
