--- a/valentine-confession.css
+++ b/valentine-confession.css
@@ -120,9 +120,10 @@ body {
 /* Медиа-запрос для мобильных устройств */
 @media (max-width: 768px) {
     .message .gif-container {
-        width: 60px; /* Уменьшаем ширину гифки на мобильных устройствах */
+        width: 40px; /* Уменьшаем ширину гифки на мобильных устройствах */
         bottom: 10px; /* Уменьшаем отступ снизу */
         right: 10px; /* Уменьшаем отступ справа */
+        z-index: 0; /* Убедитесь, что гифка находится под текстом */
     }
 
     .message {
